--- a/cleanup.yaml
+++ b/cleanup.yaml
@@ -2,6 +2,7 @@
   hosts: localhost
   vars_files:
     - variables.yaml
+    - vault-variables.yaml
     - bm-ansible-nodes.json
   tasks:
   - name: Add bastion group-host for cleanup
@@ -50,6 +51,7 @@
     - utility
   vars_files:
     - variables.yaml
+    - vault-variables.yaml
     - bm-ansible-nodes.json
   ignore_errors: True
   ignore_unreachable: True
@@ -66,6 +68,7 @@
     - hypervisor_host
   vars_files:
     - variables.yaml
+    - vault-variables.yaml
     - bm-ansible-nodes.json
   tasks:
   - name: Destroy virsh domain
