--- a/variables.yaml
+++ b/variables.yaml
@@ -45,6 +45,7 @@ worker:
 kvmhost:
   enable_selinux: True
   reboot_timeout: 1200
+  enable_portfw: True
 cluster_name: ocp4-lab
 domain: ocp4-lab.example.com
 base_domain: example.com
