--- a/variables.yaml
+++ b/variables.yaml
@@ -46,6 +46,7 @@ kvmhost:
   enable_selinux: True
   reboot_timeout: 1200
   enable_portfw: True
+  replace_ssh_key: True
 cluster_name: ocp4-lab
 domain: ocp4-lab.example.com
 base_domain: example.com
