--- a/variables.yaml
+++ b/variables.yaml
@@ -19,6 +19,7 @@ baremetal_net:
   ntp: "103.16.182.23,103.16.182.214"
   dhcp_start: 192.168.203.90
   dhcp_end: 192.168.203.110
+  mtu: 3400
 vip:
   api: 192.168.203.80
   apiint: 192.168.203.80
